fixed white space under header, repositioned elements on home page and turned all buttons on result to form buttons

--- a/public/styles/indexLayout.css
+++ b/public/styles/indexLayout.css
@@ -8,13 +8,14 @@
 }
 h1 {
     font-size: 65px;
-    background-color: teal;
+    background-color: #2F3C83;
 }
-h2 {
-    
-}
+
 #wideMenu {
     background-color: #9CA5D1;
+}
+#wideMenu button:hover {
+    background-color: rgb(108, 115, 155);
 }
 #hamburger:hover {
     background-color: #9CA5D1;
@@ -26,16 +27,18 @@ h2 {
 }
 main {
     background-color: rgb(212, 215, 233);
-    
-    /* border: 2px black solid; */
     height: 600px;
     background-image: url(../images/bored.png);
     background-size:480px;
-    background-color: rgb(212, 217, 245);
     background-repeat: no-repeat;
     background-position: bottom;
     display: flex;
-    /* flex-direction: column; */
+  
+}
+@media (max-width: 480px) {
+    main {
+        padding-left: 70px;
+    }    
 }
 /* im bored div */
 main div:nth-of-type(1){
@@ -47,34 +50,25 @@ main div:nth-of-type(1){
  }
  main div:nth-of-type(1) h2{
    font-size: 30px;
-  
+  width: 300px;
  }
  /* begin button */
- main div div{
+ main div button:hover {
+     background-color:  #6A75AF;
+     color: rgb(31, 30, 30);
+ }
+
+main div button {
     width: fit-content;
     font-size: 40px;
     height: fit-content;
     color: #1A2667;
     margin-top: 20px;
-    display: flex;
-    align-self: center;
-    justify-content: center;
     padding: 10px;
-    /* border: rgb(211, 238, 156) 2px solid; */
-    background-color: #6A75AF;
+    background-color: #9CA5D1;
     border: #475496 1px solid;
     border-radius: 10px;
     border-left: 5px #1A2667 solid;
     border-bottom: 2px #1A2667 solid;
     border-right: none;
- }
-
- main div div:hover {
-     background-color: #9CA5D1;
-     color: rgb(238, 0, 0);
- }
-main div div a {
-    text-decoration: none;
-    width: 100%;
-    align-self: center;
 }
